k8s/k8s-lb.yml
kind: Service
apiVersion: v1
metadata:
  name: haproxy-lb
spec:
  selector:
    app: haproxy
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  type: LoadBalancer
