k8s/k8s-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hateoas-svc
  labels:
    app: hateoas
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30005
    protocol: TCP
  selector:
    app: hateoas
