k8s/k8s-ingress-gcp.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: hateoas-svc
    servicePort: 30005
