k8s/k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hateoas-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: hateoas.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hateoas-svc
          servicePort: 30005
